datos card  Cliente funciona con token

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.card-cliente-parent {
+  display: flex;
+  background-color: rgba(199, 218, 218, 0.253);
+  /* text-align: center; */
+  justify-content:center;
+}
+.card-cliente-parent img {
+  margin-bottom: 30px; /* he de colocar un % del ¿vh? ancho o alto de la pantalla */
+}
