--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,11 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-
-.card-cliente-parent {
-  display: flex;
-  background-color: rgba(199, 218, 218, 0.253);
-  /* text-align: center; */
-  justify-content:center;
-}
-.card-cliente-parent img {
-  margin-bottom: 30px; /* he de colocar un % del ¿vh? ancho o alto de la pantalla */
-}
-
-.boton-editar{
-  background:#faad14; 
-}
-.boton-cancelar{
-  background:#1890ff ;
-}
-.boton-guardar{
-  background: #52c41a;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
