--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -27,15 +27,7 @@
 .App-link {
   color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ */
 
 .card-cliente-parent,
 .card-client-farewell {
@@ -46,6 +38,22 @@
 }
 .card-cliente-parent img {
   margin-bottom: 30px; /* he de colocar un % del ¿vh? ancho o alto de la pantalla */
+}
+
+/* productosTodos */
+.App {
+  display: flex;
+  align-items: center;
+  width: 320px;
+  border: solid red 2px;
+  flex-direction: column;
+}
+.flex-div {
+  display: flex;
+  width: 280px;
+  border: solid rgb(168, 79, 190) 2px;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* 
