--- a/src/App.css
+++ b/src/App.css
@@ -120,7 +120,7 @@ body {
 
 footer {
   padding: 7px 0px;
-  background-color: rgb(193, 203, 221);
+  background-color: #c1cbdd;
   display: grid;
   grid-template-columns: 1fr;
   text-align: start;
@@ -137,6 +137,12 @@ footer .navegation-links {
   font-weight: bold;
   margin-bottom: 10px;
   color: black;
+}
+
+.carrusel {
+  width: '133px';
+  border-color: 25px solid rgb(240, 190, 54);
+  z-index: 2;
 }
 
 @media (min-width: 768px) {
