--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,16 @@ body {
 .img-tablet {
   display: none;
 }
+.title-head-line {
+  /* font-family: 'Quicksand', sans-serif; */
+  font-family: 'Concert One';
+  font-weight: 500;
+  /* font-size: 2em; */ /* && quiero que sea el doble a lo que trae por defecto */
+}
+.body-head-line {
+  font-family: 'Asul', sans-serif;
+  padding: 0 10px;
+}
 
 footer {
   padding: 7px 0px;
@@ -130,7 +140,10 @@ footer .navegation-links {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  font-size: 10px;
+  font-size: 15px;
+}
+footer .navegation-links a {
+  color: rgb(76, 175, 120);
 }
 
 .footer-title {
@@ -162,6 +175,13 @@ footer .navegation-links {
   }
   .navegation-select {
     display: none;
+  }
+  .title {
+    margin-left: 6px;
+    font-weight: 300;
+  }
+  .title-head-line {
+    font-size: 2em; /* && quiero que sea el doble a lo que trae por defecto */
   }
   footer {
     grid-template-columns: 1fr 1fr 1fr;
