--- a/src/App.css
+++ b/src/App.css
@@ -141,9 +141,10 @@ footer .navegation-links {
   flex-direction: column;
   align-items: flex-start;
   font-size: 15px;
+  padding-bottom: 10px;
 }
 footer .navegation-links a {
-  color: rgb(76, 175, 120);
+  color: #10429e;
 }
 
 .footer-title {
@@ -151,11 +152,21 @@ footer .navegation-links a {
   margin-bottom: 10px;
   color: black;
 }
+.footer-release {
+  color: #9e700d;
+  font-size: 1.3em;
+  text-align: center;
+  margin-top: 7px;
+}
 
 .carrusel {
   width: '133px';
   border-color: 25px solid rgb(240, 190, 54);
   z-index: 2;
+}
+
+.footer-derechos {
+  padding: 12px 0;
 }
 
 @media (min-width: 768px) {
@@ -185,6 +196,9 @@ footer .navegation-links a {
   }
   footer {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  .footer-release {
+    margin-top: 35px;
   }
   .App {
     width: 768px;
