--- a/src/App.css
+++ b/src/App.css
@@ -49,26 +49,16 @@ body {
   display: flex;
   align-items: center;
   width: 320px;
-  border: solid red 2px;
+  /* border: solid red 2px; */ /* &&recuadro condicional */
   flex-direction: column;
 }
 .flex-div {
   display: flex;
   width: 280px;
-  border: solid rgb(168, 79, 190) 2px;
+  /* border: solid rgb(168, 79, 190) 2px; */ /* &&recuadro condicional */
   flex-direction: column;
 }
 
-/* 
-.boton-editar{
-  background-color:#faad14 !important; 
-}
-.boton-cancel{
-  background-color:#1890ff !important;
-}
-.boton-guardar{
-  background-color: #52c41a !important;
-} */
 .ionicon {
   width: 30px;
 }
@@ -118,7 +108,6 @@ body {
   display: none;
 }
 .title-head-line {
-  /* font-family: 'Quicksand', sans-serif; */
   font-family: 'Concert One';
   font-weight: 500;
   /* font-size: 2em; */ /* && quiero que sea el doble a lo que trae por defecto */
@@ -211,7 +200,7 @@ footer .navegation-links a {
   }
   .App {
     width: 768px;
-    border: solid rgb(185, 111, 111) 2px;
+    /* border: solid rgb(185, 111, 111) 2px; */ /* &&recuadro condicional */
   }
   .flex-div {
     width: 724px;
@@ -227,7 +216,7 @@ footer .navegation-links a {
 @media (min-width: 1024px) {
   .App {
     width: 1024px;
-    border: solid rgb(185, 111, 111) 2px;
+    /* border: solid rgb(185, 111, 111) 2px; */ /* &&recuadro condicional */
   }
   .flex-div {
     width: 940px;
